--- a/WebPrint.html
+++ b/WebPrint.html
@@ -3,131 +3,133 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TypedPaper</title>
-    <link href="https://cdn.bootcdn.net/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet">
-    <style>
-        .menu-bar {
-            display: flex;
-            padding: 12px;
-            flex-wrap: wrap;
-            align-items: center;
-            justify-content: space-evenly;
-            background-color: rgb(228, 230, 240);
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TypedPaper</title>
+  <link href="https://cdn.bootcdn.net/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet" />
+  <style>
+    .menu-bar {
+      display: flex;
+      padding: 12px;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: space-evenly;
+      background-color: rgb(228, 230, 240);
+    }
 
-        .menu-item {
-            display: flex;
-            flex: 1;
-            flex-direction: column;
+    .menu-item {
+      display: flex;
+      flex: 1;
+      flex-direction: column;
+    }
 
-        }
+    .menu-item label {
+      font-size: 12px;
+    }
 
-        .menu-item label {
-            font-size: 12px;
-        }
+    .paper-orientation {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      /* margin-bottom: 10px; */
+    }
 
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 36px;
+      height: 24px;
+    }
 
-        .paper-orientation {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            /* margin-bottom: 10px; */
-        }
+    .switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
 
-        .switch {
-            position: relative;
-            display: inline-block;
-            width: 36px;
-            height: 24px;
-        }
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      transition: 0.4s;
+      border-radius: 34px;
+    }
 
-        .switch input {
-            opacity: 0;
-            width: 0;
-            height: 0;
-        }
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 16px;
+      width: 16px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      transition: 0.4s;
+      border-radius: 50%;
+    }
 
-        .slider {
-            position: absolute;
-            cursor: pointer;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: #ccc;
-            transition: .4s;
-            border-radius: 34px;
-        }
+    input:checked+.slider {
+      background-color: #2196f3;
+    }
 
-        .slider:before {
-            position: absolute;
-            content: "";
-            height: 16px;
-            width: 16px;
-            left: 4px;
-            bottom: 4px;
-            background-color: white;
-            transition: .4s;
-            border-radius: 50%;
-        }
-
-        input:checked+.slider {
-            background-color: #2196F3;
-        }
-
-        input:checked+.slider:before {
-            transform: translateX(12px);
-        }
-    </style>
+    input:checked+.slider:before {
+      transform: translateX(12px);
+    }
+  </style>
 </head>
 
 <body>
-    <div class="menu-bar">
-        <div class="menu-item paper-size">
-            <label for="size">纸张尺寸</label>
-            <select id="size">
-                <option value="a4" selected>A4</option>
-                <option value="b4">B4</option>
-                <option value="a3">A3</option>
-                <!-- 可以在这里添加更多纸张尺寸 -->
-            </select>
-        </div>
-        <div class="menu-item paper-orientation">
-            <label>纸张方向</label>
-            <div style="
-            display: inline-flex;
-            align-items: center;">
-                纵向
-                <label class="switch" for="orientation">
-                    <input type="checkbox" id="orientation" checked>
-                    <span class="slider"></span>
-
-                </label>
-                横向
-            </div>
-
-        </div>
-
-        <div class="menu-item fonts">
-            <label for="font">字体</label>
-            <select id="font">
-                <option value="Arial" selected>Arial</option>
-                <option value="'OPlusSans3.0-Bold'">OPlusSans3.0-Bold</option>
-                <option value="TsangerBangHei-Regular">TsangerBangHei-Regular</option>
-                <option value="HarmonyOS_Sans_SC_Black">HarmonyOS_Sans_SC_Black</option>
-            </select>
-        </div>
-
-        <div class="menu-item text-color">
-            <label for="color">字体颜色</label>
-            <input type="color" id="color" value="#000000">
-        </div>
-
-
-        <button id="printButton" onclick="printPage()">打印</button>
+  <div class="menu-bar">
+    <div class="menu-item paper-size">
+      <label for="size">纸张尺寸</label>
+      <select id="size">
+        <option value="a4" selected>A4</option>
+        <option value="b4">B4</option>
+        <option value="a3">A3</option>
+        <!-- 可以在这里添加更多纸张尺寸 -->
+      </select>
     </div>
+    <div class="menu-item paper-orientation">
+      <label>纸张方向</label>
+      <div style="display: inline-flex; align-items: center">
+        纵向
+        <label class="switch" for="orientation">
+          <input type="checkbox" id="orientation" checked />
+          <span class="slider"></span>
+        </label>
+        横向
+      </div>
+    </div>
+
+    <div class="menu-item fonts">
+      <label for="font">字体</label>
+      <select id="font">
+        <option value="Arial" selected>Arial</option>
+        <option value="'OPlusSans3.0-Bold'">OPlusSans3.0-Bold</option>
+        <option value="TsangerBangHei-Regular">TsangerBangHei-Regular</option>
+        <option value="HarmonyOS_Sans_SC_Black">
+          HarmonyOS_Sans_SC_Black
+        </option>
+      </select>
+    </div>
+
+    <div class="menu-item text-color">
+      <label for="color">字体颜色</label>
+      <input type="color" id="color" value="#000000" />
+    </div>
+    <button id="printButton" onclick="printPage()">打印</button>
+  </div>
+  <div class="workspace">
+    <div class="paper">
+      <section class="typographical-1">
+        <textarea name="content" id=""></textarea>
+      </section>
+
+    </div>
+  </div>
 </body>
 
 </html>
